--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
+    "react-native-ble-plx": "^1.0.1",
     "react-native-color-picker": "^0.4.0",
     "react-native-navigation": "2.5.1",
     "react-native-sqlite-storage": "^3.3.9"
